# pokedex

./: README.md  history.txt
api/: Cargo.toml  README.md
fetch/: .gitignore  Cargo.toml
fetch/config/: config.default.ron
fetch/src/: config.rs  main.rs  pokemon_expand.rs
web/: package-lock.json  package.json
