[package]
name = "fetch"
version = "0.1.0"
authors = ["Charles Bayley <cbayley95@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.17"
mongodb = "1.2.3"
ron = "0.6.4"
serde = "1.0.130"

[dependencies.pokerust]
git = "https://github.com/floh1695/pokerust"
version = "0.2.0"
rev = "2f59bac9ff37417753f499a5470bfc026b798928"

[dependencies.tokio]
version = "0.2.18"
features = ["full"]
